Make position-independent binaries.

--- a/playground/src/Makefile
+++ b/playground/src/Makefile
@@ -2,7 +2,7 @@
 
 
 CC=clang
-CFLAGS=-g `pkg-config --cflags --libs zlib`
+CFLAGS=-fPIC -g `pkg-config --cflags --libs zlib`
 
 %.o: %.c
 	$(CC) -c $< -o $@
